Fixed mobile error where dice could swap with the buttons and text bubbles. Fixed error where rules were covered by the dice (z-index issue).

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,6 @@ body {
     font-size: 0;
     width: 100px;
     height: 150px;
-    z-index: 1;
 }
 
 .screen {
